--- a/index.html
+++ b/index.html
@@ -28,24 +28,29 @@
           href="http://christinatruong.com">christinatruong.com</a>.</p>
 
       <!-- Copy the whole <section> block to add more projects. -->
-      <section>
-        <h3>Project Name</h3>
-        <img src="images/marvel-project.png" alt="description of image">
-        <p>Summary or description of the project and/or your role in it. Add as many paragraphs as you need.</p>
-        <a href="#" target="_blank">View project / case study</a>
-      </section>
-      <section>
-        <h3>Project Name</h3>
-        <img src="images/lp.png" alt="description of image">
-        <p>Summary or description of the project and/or your role in it. Add as many paragraphs as you need.</p>
-        <a href="#" target="_blank">View project / case study</a>
-      </section>
-      <section>
-        <h3>Project Name</h3>
-        <video src="images/scrollingbook.mp4" autoplay muted loop alt="description of image">
+      <div class="projects-container">
+
+
+        <section>
+          <h3>Scrolling Book</h3>
+          <video class="project-img" src="images/scrollingbook.mp4" autoplay muted loop alt="description of image">
+          </video>
           <p>Summary or description of the project and/or your role in it. Add as many paragraphs as you need.</p>
           <a href="#" target="_blank">View project / case study</a>
-      </section>
+        </section>
+        <section>
+          <h3>Marvel API Challenge</h3>
+          <img class="project-img" src="images/marvel-project.png" alt="description of image">
+          <p>Summary or description of the project and/or your role in it. Add as many paragraphs as you need.</p>
+          <a href="#" target="_blank">View project / case study</a>
+        </section>
+        <section>
+          <h3>Live Landing Page</h3>
+          <img class="project-img" src="images/lp.png" alt="description of image">
+          <p>Summary or description of the project and/or your role in it. Add as many paragraphs as you need.</p>
+          <a href="#" target="_blank">View project / case study</a>
+        </section>
+      </div>
       <!-- End of Project block. -->
     </section>
 
@@ -55,32 +60,47 @@
       <p>Optional paragraph for work experience summary. Not a part of the job details. Delete if not being used.</p>
 
       <!-- Copy this whole <section> block to add more jobs. -->
-      <section>
-        <h3>Proofreader</h3>
-        <p>Tea Books</p>
-        <p>Date at job</p>
-        <p>Job summary goes here. Add as many paragraphs as you need.</p>
-        <p>Optional list:</p>
-        <ul>
-          <li>Delete this list if you don't need it.</li>
-          <li>Created...</li>
-          <li>Lead...</li>
-          <li>Responsible for...</li>
-        </ul>
+
+
+      <section class="experience-container">
+        <div class="job-data">
+
+          <h3>Proofreader</h3>
+          <p>Tea Books</p>
+          <p>Date at job</p>
+        </div>
+        <div class="job-summary">
+
+          <p>Job summary goes here. Add as many paragraphs as you need.</p>
+          <p>Optional list:</p>
+          <ul>
+            <li>Delete this list if you don't need it.</li>
+            <li>Created...</li>
+            <li>Lead...</li>
+            <li>Responsible for...</li>
+          </ul>
+        </div>
       </section>
-      <section>
-        <h3>Professor of serbian language and literature</h3>
-        <p>ETS Rade Koncar</p>
-        <p>Date at job</p>
-        <p>Job summary goes here. Add as many paragraphs as you need.</p>
-        <p>Optional list:</p>
-        <ul>
-          <li>Delete this list if you don't need it.</li>
-          <li>Created...</li>
-          <li>Lead...</li>
-          <li>Responsible for...</li>
-        </ul>
+      <section class="experience-container">
+        <div class="job-data">
+
+          <h3>Professor of serbian language and literature</h3>
+          <p>ETS Rade Koncar</p>
+          <p>Date at job</p>
+        </div>
+        <div class="job-summary">
+
+          <p>Job summary goes here. Add as many paragraphs as you need.</p>
+          <p>Optional list:</p>
+          <ul>
+            <li>Delete this list if you don't need it.</li>
+            <li>Created...</li>
+            <li>Lead...</li>
+            <li>Responsible for...</li>
+          </ul>
+        </div>
       </section>
+
       <!-- End of Job block. -->
     </section>
 
@@ -89,16 +109,19 @@
       <h2>Education</h2>
 
       <!-- Copy this whole <section> block to add more schools. -->
-      <section>
-        <h3>ITBootcamp - Belgrade</h3>
-        <p>Designation received or program name, year attended</p>
-        <p>Summary or accomplishments.</p>
-      </section>
-      <section>
-        <h3>Faculty of Philology</h3>
-        <p>Designation received or program name, year attended</p>
-        <p>Summary or accomplishments.</p>
-      </section>
+      <div class="education-container">
+
+        <section>
+          <h3>ITBootcamp - Belgrade</h3>
+          <p>Designation received or program name, year attended</p>
+          <p>Summary or accomplishments.</p>
+        </section>
+        <section>
+          <h3>Faculty of Philology</h3>
+          <p>Designation received or program name, year attended</p>
+          <p>Summary or accomplishments.</p>
+        </section>
+      </div>
       <!-- End of School block. -->
     </section>
 
@@ -109,8 +132,7 @@
       <!-- Social media and contact links. Add or remove any networks. -->
       <ul>
         <li><a href="zabiljanupavlovic@gmail.com">zabiljanupavlovic@gmail.com</a></li>
-        <li><a href="https://biljanapavlovic.github.io/portfolio/"
-            target="_blank">https://biljanapavlovic.github.io/portfolio/</a></li>
+        <li><a href="https://biljanapavlovic.github.io/portfolio/" target="_blank">my portfolio</a></li>
         <li><a href="https://github.com/BiljanaPavlovic" target="_blank">GitHub</a></li>
         <li><a href="https://www.linkedin.com/in/biljana-pavlovic-29a0907b/" target="_blank">LinkedIn</a></li>
         <li><a href="https://www.facebook.com/biljana.pavlovic1/" target="_blank">Facebook</a></li>
