--- a/index.html
+++ b/index.html
@@ -12,131 +12,141 @@
   <main>
     <!-- ***********************  ABOUT / PROFILE  *********************** -->
     <header>
-      <h1>Biljana Pavlovic</h1>
-      <h2>Frontend web developer</h2>
+      <div class="content-wrap">
 
-      <p>Add your profile copy here. Add more paragraphs or links as needed. Here is some dummy text: Lorem ipsum dolor
-        sit amet, consectetur adipiscing elit. Praesent bibendum, diam ut gravida efficitur, risus neque scelerisque
-        erat, ut rhoncus erat odio ac justo. Nunc scelerisque vestibulum augue, sit amet hendrerit ante.</p>
-      <p>Add another paragraph if needed.</p>
+        <h1>Biljana Pavlovic</h1>
+        <h2>Frontend web developer</h2>
+
+        <p>Add your profile copy here. Add more paragraphs or links as needed. Here is some dummy text: Lorem ipsum
+          dolor
+          sit amet, consectetur adipiscing elit. Praesent bibendum, diam ut gravida efficitur, risus neque scelerisque
+          erat, ut rhoncus erat odio ac justo. Nunc scelerisque vestibulum augue, sit amet hendrerit ante.</p>
+        <p>Add another paragraph if needed.</p>
+      </div>
     </header>
 
     <!-- ********************  PROJECTS / PORTFOLIO  ********************* -->
-    <section>
-      <h2>Featured Projects</h2>
-      <p>View selected projects below. More information can be found at <a
-          href="http://christinatruong.com">christinatruong.com</a>.</p>
+    <section class="projects">
+      <div class="content-wrap divider">
 
-      <!-- Copy the whole <section> block to add more projects. -->
-      <div class="projects-container">
+        <h2>Featured Projects</h2>
+        <p>View selected projects below. More information can be found at <a
+            href="http://christinatruong.com">christinatruong.com</a>.</p>
 
-
-        <section>
+        <!-- Project 1 -->
+        <section class="project-item">
           <h3>Scrolling Book</h3>
-          <video class="project-img" src="images/scrollingbook.mp4" autoplay muted loop alt="description of image">
-          </video>
+
+          <img src="images/scrollingbook.png" alt="description of image">
           <p>Summary or description of the project and/or your role in it. Add as many paragraphs as you need.</p>
-          <a href="#" target="_blank">View project / case study</a>
+          <a class="btn" href="#" target="_blank">View project / case study</a>
         </section>
-        <section>
+
+        <!-- Project 2 -->
+        <section class="project-item">
           <h3>Marvel API Challenge</h3>
-          <img class="project-img" src="images/marvel-project.png" alt="description of image">
+          <img src="images/marvel-project.png" alt="description of image">
           <p>Summary or description of the project and/or your role in it. Add as many paragraphs as you need.</p>
-          <a href="#" target="_blank">View project / case study</a>
+          <a class="btn" href="#" target="_blank">View project / case study</a>
         </section>
-        <section>
+
+        <!-- Project 3 -->
+        <section class="project-item">
           <h3>Live Landing Page</h3>
-          <img class="project-img" src="images/lp.png" alt="description of image">
+          <img src="images/lp.png" alt="description of image">
           <p>Summary or description of the project and/or your role in it. Add as many paragraphs as you need.</p>
-          <a href="#" target="_blank">View project / case study</a>
+          <a class="btn" href="#" target="_blank">View project / case study</a>
+
         </section>
       </div>
-      <!-- End of Project block. -->
     </section>
 
     <!-- ***********************  WORK EXPERIENCE  *********************** -->
-    <section>
-      <h2>Work Experience</h2>
-      <p>Optional paragraph for work experience summary. Not a part of the job details. Delete if not being used.</p>
+    <section class="work-experience">
+      <div class="content-wrap item-details divider">
+        <h2>Work Experience</h2>
+        <p>See my complete work history on <a href="https://www.linkedin.com/in/christinatruong/">LinkedIn</a>.</p>
 
-      <!-- Copy this whole <section> block to add more jobs. -->
+        <!-- Job 1 -->
 
 
-      <section class="experience-container">
-        <div class="job-data">
+        <section class="job-item">
+          <div class="job-details">
 
-          <h3>Proofreader</h3>
-          <p>Tea Books</p>
-          <p>Date at job</p>
-        </div>
-        <div class="job-summary">
+            <h3>Proofreader</h3>
+            <p>Tea Books</p>
+            <p>Date at job</p>
+          </div>
+          <div class="job-summary">
 
-          <p>Job summary goes here. Add as many paragraphs as you need.</p>
-          <p>Optional list:</p>
-          <ul>
-            <li>Delete this list if you don't need it.</li>
-            <li>Created...</li>
-            <li>Lead...</li>
-            <li>Responsible for...</li>
-          </ul>
-        </div>
-      </section>
-      <section class="experience-container">
-        <div class="job-data">
+            <p>Job summary goes here. Add as many paragraphs as you need.</p>
+            <p>Optional list:</p>
+            <ul>
+              <li>Delete this list if you don't need it.</li>
+              <li>Created...</li>
+              <li>Lead...</li>
+              <li>Responsible for...</li>
+            </ul>
+          </div>
+        </section>
+        <!-- Job 2 -->
+        <section class="job-item">
+          <div class="job-details">
 
-          <h3>Professor of serbian language and literature</h3>
-          <p>ETS Rade Koncar</p>
-          <p>Date at job</p>
-        </div>
-        <div class="job-summary">
+            <h3>Professor of serbian language and literature</h3>
+            <p>ETS Rade Koncar</p>
+            <p>Date at job</p>
+          </div>
+          <div class="job-summary">
 
-          <p>Job summary goes here. Add as many paragraphs as you need.</p>
-          <p>Optional list:</p>
-          <ul>
-            <li>Delete this list if you don't need it.</li>
-            <li>Created...</li>
-            <li>Lead...</li>
-            <li>Responsible for...</li>
-          </ul>
-        </div>
-      </section>
+            <p>Job summary goes here. Add as many paragraphs as you need.</p>
+            <p>Optional list:</p>
+            <ul>
+              <li>Delete this list if you don't need it.</li>
+              <li>Created...</li>
+              <li>Lead...</li>
+              <li>Responsible for...</li>
+            </ul>
+          </div>
+        </section>
 
-      <!-- End of Job block. -->
+      </div>
     </section>
 
     <!-- ******************  EDUCATION & CERTIFICATIONS ****************** -->
-    <section>
-      <h2>Education</h2>
-
-      <!-- Copy this whole <section> block to add more schools. -->
-      <div class="education-container">
+    <section class="education">
+      <div class="content-wrap item-details">
+        <h2>Education</h2>
 
         <section>
           <h3>ITBootcamp - Belgrade</h3>
           <p>Designation received or program name, year attended</p>
           <p>Summary or accomplishments.</p>
         </section>
+
         <section>
           <h3>Faculty of Philology</h3>
           <p>Designation received or program name, year attended</p>
           <p>Summary or accomplishments.</p>
         </section>
       </div>
-      <!-- End of School block. -->
     </section>
 
     <!-- *****************  CONTACT INFO / SOCIAL MEDIA  ***************** -->
     <footer>
-      <h2>Let's Keep in Touch!</h2>
+      <div class="content-wrap">
 
-      <!-- Social media and contact links. Add or remove any networks. -->
-      <ul>
-        <li><a href="zabiljanupavlovic@gmail.com">zabiljanupavlovic@gmail.com</a></li>
-        <li><a href="https://biljanapavlovic.github.io/portfolio/" target="_blank">my portfolio</a></li>
-        <li><a href="https://github.com/BiljanaPavlovic" target="_blank">GitHub</a></li>
-        <li><a href="https://www.linkedin.com/in/biljana-pavlovic-29a0907b/" target="_blank">LinkedIn</a></li>
-        <li><a href="https://www.facebook.com/biljana.pavlovic1/" target="_blank">Facebook</a></li>
-      </ul>
+        <h2>Let's Keep in Touch!</h2>
+
+        <!-- Social media and contact links. Add or remove any networks. -->
+        <ul class="contact-list">
+          <li><a href="zabiljanupavlovic@gmail.com">zabiljanupavlovic@gmail.com</a></li>
+          <li><a href="https://biljanapavlovic.github.io/portfolio/" target="_blank">my portfolio</a></li>
+          <li><a href="https://github.com/BiljanaPavlovic" target="_blank">GitHub</a></li>
+          <li><a href="https://www.linkedin.com/in/biljana-pavlovic-29a0907b/" target="_blank">LinkedIn</a></li>
+          <li><a href="https://www.facebook.com/biljana.pavlovic1/" target="_blank">Facebook</a></li>
+        </ul>
+      </div>
     </footer>
   </main>
 </body>
