--- a/index.html
+++ b/index.html
@@ -17,11 +17,15 @@
         <h1>Biljana Pavlovic</h1>
         <h2>Frontend web developer</h2>
 
-        <p>Add your profile copy here. Add more paragraphs or links as needed. Here is some dummy text: Lorem ipsum
-          dolor
-          sit amet, consectetur adipiscing elit. Praesent bibendum, diam ut gravida efficitur, risus neque scelerisque
-          erat, ut rhoncus erat odio ac justo. Nunc scelerisque vestibulum augue, sit amet hendrerit ante.</p>
-        <p>Add another paragraph if needed.</p>
+        <p>I'm curious, creative and I love to learn
+          and gain new skills. I'm analytical and
+          detail oriented. I am dedicated to the
+          work that is assigned to me and I always
+          strive to do it in the best way possible. I
+          am well organized and always strive to
+          meet the deadlines that have been set
+          for me</p>
+        <p>IT skills: HTML, CSS, SCSS, Bootstrap, JavaScript, React...</p>
       </div>
     </header>
 
@@ -31,31 +35,33 @@
 
         <h2>Featured Projects</h2>
         <p>View selected projects below. More information can be found at <a
-            href="http://christinatruong.com">christinatruong.com</a>.</p>
+            href="https://biljanapavlovic.github.io/portfolio/" target="_blank">My portfolio sajt</a>.</p>
 
         <!-- Project 1 -->
         <section class="project-item">
           <h3>Scrolling Book</h3>
-
-          <img src="images/scrollingbook.png" alt="description of image">
-          <p>Summary or description of the project and/or your role in it. Add as many paragraphs as you need.</p>
-          <a class="btn" href="#" target="_blank">View project / case study</a>
+          <img src="images/scrollingbook.png" alt="project image scrolling book">
+          <p>The project I won the Mintbean hackathon with is a scrolling book of my path to technology. It is made in
+            React and CSS.</p>
+          <a class="btn" href="https://biljanapavlovic.github.io/scrollingbook/" target="_blank">View project</a>
         </section>
 
         <!-- Project 2 -->
         <section class="project-item">
           <h3>Marvel API Challenge</h3>
-          <img src="images/marvel-project.png" alt="description of image">
-          <p>Summary or description of the project and/or your role in it. Add as many paragraphs as you need.</p>
-          <a class="btn" href="#" target="_blank">View project / case study</a>
+          <img src="images/marvel-project.png" alt="project Marvel image">
+          <p>This project uses the Marvel API and allows users to search for Marvel heroes and store them in local
+            storage.</p>
+          <a class="btn" href="https://biljanapavlovic.github.io/MarvelApiChallenge/" target="_blank">View project</a>
         </section>
 
         <!-- Project 3 -->
         <section class="project-item">
           <h3>Live Landing Page</h3>
-          <img src="images/lp.png" alt="description of image">
-          <p>Summary or description of the project and/or your role in it. Add as many paragraphs as you need.</p>
-          <a class="btn" href="#" target="_blank">View project / case study</a>
+          <img src="images/lp.png" alt="landing page image">
+          <p>This website is a landing page with a video animation in the background.</p>
+          <a class="btn" href="https://biljanapavlovic.github.io/landing-page-practis-/#about" target="_blank">View
+            project</a>
 
         </section>
       </div>
@@ -65,7 +71,8 @@
     <section class="work-experience">
       <div class="content-wrap item-details divider">
         <h2>Work Experience</h2>
-        <p>See my complete work history on <a href="https://www.linkedin.com/in/christinatruong/">LinkedIn</a>.</p>
+        <p>See my complete work history on <a href="https://www.linkedin.com/in/biljana-pavlovic-29a0907b/"
+            target="_blank">LinkedIn</a>.</p>
 
         <!-- Job 1 -->
 
@@ -75,37 +82,34 @@
 
             <h3>Proofreader</h3>
             <p>Tea Books</p>
-            <p>Date at job</p>
+            <p>jull 2021. to present</p>
           </div>
           <div class="job-summary">
 
-            <p>Job summary goes here. Add as many paragraphs as you need.</p>
-            <p>Optional list:</p>
-            <ul>
-              <li>Delete this list if you don't need it.</li>
-              <li>Created...</li>
-              <li>Lead...</li>
-              <li>Responsible for...</li>
-            </ul>
+            <p>Proofreaders catch spelling, grammar, and punctuation errors. They also look at the format to make
+              certain all elements are included and appear as they should—spotting things like a sentence printing twice
+              or accidentally getting omitted, a headline failing to show as bold, or the date missing from a document.
+            </p>
           </div>
         </section>
         <!-- Job 2 -->
         <section class="job-item">
           <div class="job-details">
-
             <h3>Professor of serbian language and literature</h3>
             <p>ETS Rade Koncar</p>
-            <p>Date at job</p>
+            <p>September 2021.</p>
           </div>
           <div class="job-summary">
 
-            <p>Job summary goes here. Add as many paragraphs as you need.</p>
-            <p>Optional list:</p>
+            <p>Duties of a Serbian literature professor include delivering lectures, developing and grading test papers,
+              reviewing textbooks and other course supplemental materials, and interacting with students and peers.
+            </p>
+            <p>Main duties:</p>
             <ul>
-              <li>Delete this list if you don't need it.</li>
-              <li>Created...</li>
-              <li>Lead...</li>
-              <li>Responsible for...</li>
+              <li>Presenting lectures.</li>
+              <li>Creating supplemental instructional materials.</li>
+              <li>Maintain student attendance records, grades, and other required records.</li>
+
             </ul>
           </div>
         </section>
@@ -120,14 +124,13 @@
 
         <section>
           <h3>ITBootcamp - Belgrade</h3>
-          <p>Designation received or program name, year attended</p>
-          <p>Summary or accomplishments.</p>
+          <p>JavaScript and React</p>
         </section>
 
         <section>
           <h3>Faculty of Philology</h3>
-          <p>Designation received or program name, year attended</p>
-          <p>Summary or accomplishments.</p>
+          <p>Serbian Literature and Language with Comparative
+            Literature</p>
         </section>
       </div>
     </section>
@@ -135,7 +138,6 @@
     <!-- *****************  CONTACT INFO / SOCIAL MEDIA  ***************** -->
     <footer>
       <div class="content-wrap">
-
         <h2>Let's Keep in Touch!</h2>
 
         <!-- Social media and contact links. Add or remove any networks. -->
